# grillsense

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md  config.yaml  run.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  deploy.yaml
src/: ble.rs  cloud.rs  lan.rs  main.rs  mqtt.rs  protocol.rs  udp.rs
translations/: en.yaml
