[package]
name = "grillsense"
version = "0.1.6"
edition = "2024"

[features]
ble = ["dep:btleplug", "dep:futures", "dep:uuid"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
md-5 = "0.10"
anyhow = "1"
btleplug = { version = "0.12", optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1", optional = true }
